Rename CSelectionScreen.* files to CSelectionBase.*

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -45,7 +45,7 @@ set(client_SRCS
 
 		pregame/CPreGame.cpp
 		pregame/CCampaignScreen.cpp
-		pregame/CSelectionScreen.cpp
+		pregame/CSelectionBase.cpp
 		pregame/OptionsTab.cpp
 		pregame/RandomMapTab.cpp
 		pregame/SelectionTab.cpp
@@ -111,7 +111,7 @@ set(client_HEADERS
 
 		pregame/CPreGame.h
 		pregame/CCampaignScreen.h
-		pregame/CSelectionScreen.h
+		pregame/CSelectionBase.h
 		pregame/OptionsTab.h
 		pregame/RandomMapTab.h
 		pregame/SelectionTab.h
